# DesktopPager

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
installer/: License.rtf  Product.wxs
scripts/: build-and-package.ps1  create-app-icon.ps1  verify-and-install.ps1
src/DesktopPager.NativeCpp/: CMakeLists.txt  main.cpp  resources.rc
src/DesktopPager.Tray/: AutostartService.cs  BarForm.cs  BarMenuStyle.cs  BarStyle.cs  CoinButton.cs  CoverFlow3DWindow.cs  CoverFlowForm.cs  DesktopIconPagerService.cs  DesktopPageManager.cs  DesktopPager.Tray.csproj  ExplorerService.cs  FlatIconButton.cs  GlobalHotkeyManager.cs  IDesktopIconPagerService.cs  IconPositioningEngine.cs  NativeDesktopApi.cs  NetworkService.cs  PerfService.cs  Program.cs  ScreenRotationService.cs  Shop3DWindow.cs  StartMenuForm.cs  TerminalPanel.cs  TesseractPalette.cs  ThemeService.cs  ThumbnailProvider.cs  TrayApplicationContext.cs  TrayIconReader.cs  VrMode.cs
src/DesktopPager.Tray/DesktopEffects/: Capture.cs  CubeOverlay.cs  DesktopEffectsService.cs  EffectsNative.cs  GlobalMouseHook.cs  MoveSizeHook.cs  TaskbarTweaks.cs  WobbleOverlay.cs
src/DesktopPager.VR/: DesktopPager.VR.csproj  FileSystemModel.cs  OpenXrRuntime.cs  Program.cs  README.md  VrShell.cs
tests/DesktopPager.Tray.Tests/: DesktopPageManagerTests.cs  DesktopPager.Tray.Tests.csproj  IconPositioningEngineTests.cs
